assets/css/style.css
/*--------- Google fonts ---------*/
@import url('https://fonts.googleapis.com/css2?family=Ranchers&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Monda&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text&display=swap');

/*--------- Body ---------*/
* {
    box-sizing: border-box;
    user-select: none;
    -moz-user-select: none;
}

h1,
h2,
h3,
h4,
h5 {
    font-family: "Ranchers", sans-serif;
    letter-spacing: 5px;
}

p {
    font-family: "Monda", sans-serif;
}

body {
    margin: 0;
    padding: 0px;
    background: url("https://res.cloudinary.com/dyxe4g62g/image/upload/v1610284915/images/albums/MS2/background/snake-background-2.jpg") no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

/*--------- Stops clicking on anything but the modal. Code from https://stackoverflow.com/questions/45607982/how-to-disable-background-when-modal-window-pops-up ---------*/
body.modal-open {
    pointer-events: none;
}



/*--------- Control buttons ---------*/
.control-container {
    width: 100%;
    height: auto;
    background-color: rgba(0, 0, 0, .8);
    color: #28b213;
    text-align: center;
    padding: 0;
    margin-left: 0px;
    margin-top: 0px;
}

.music-icon i {
    font-size: 50px;
    padding: 0 0 5px 0;
}

.music-icon i:hover {
    transform: scale(1.2);
    -webkit-transform: scale(1.2);
    cursor: pointer;
    color: #BD8025;
}

.music-icon {
    margin: 0px 30px 0px 0px;
}

.restart-icon {
    margin: 0px 0px 0px 30px;
}

.restart-icon i {
    font-size: 40px;
    padding: 5px 0 2px 0;
}

.restart-icon i:hover {
    color: #BD8025;
    transform: scale(1.2);
    -webkit-transform: scale(1.2);
}

/* --------- Scoreboarde ------------- */

.scoreboard {
    text-align: center;
    min-width: 300px;
    width: auto;
    min-height: 375px;
    height: auto ;
    border: 5px solid orange;
    background-color: rgba(0, 0, 0, .9);
    border-radius: 12px;
    position: absolute;
    left: 20px;
    top: 248px;
    padding: 5px;
    pointer-events: auto;
}

.scoreboard h5 {
    font-size: 40px;
    color: #BD8025;
    text-decoration: underline;
}

.scoreboard ol {
    color: #28b213;
    font-size: 40px;
}

.score-text {
    color: #fafafa;
    font-family: "Big Shoulders Stencil Text", sans-serif;
}

.score-text li {
    font-size: 30px;
}

.last-score-view {
    position: fixed;
    top: 30px;
    left: 20px;
    display: none;
}




/* --------- Memory Game ------------- */

/* --------- Welcome Modal -------------------*/

.modal-header {

    background-color: black;
    text-align: center;
    justify-content: center;
    border: none;
}

.modal h4 {
    color: #BD8025;
    font-size: 4em;

}

.modal h5 {
    font-size: 3em;
    color: #BD8025;
}

.modal p {
    font-size: 2em;
}

.modal-body {
    color: #28b213;
    background-color: black;
    text-align: center;
    border: none;
    pointer-events: auto;
}


.modal .modal-footer {
    background-color: black;
    text-align: center;
    justify-content: center;
    border: none;
}

.modal button {
    border-radius: 12px;
    border: 1px solid orange;
    color: #fafafa;
    width: 200px;
    height: 100px;
    font-family: "Ranchers", sans-serif;
    font-weight: 800;
    font-size: 50px;
    /*--Text outline trick from https://stackoverflow.com/questions/4919076/outline-effect-to-text*/
    text-shadow: #000 0px 0px 1px, #000 0px 0px 1px, #000 0px 0px 1px,
        #000 0px 0px 1px, #000 0px 0px 1px, #000 0px 0px 1px;
    -webkit-font-smoothing: antialiased;
}

.easy {
    background-color: #28b213;
}

.medium {
    background-color: #BD8025;
}

.hard {
    background-color: #d70040;
}



/* --------- heading -------------------*/
.page-title {
    color: #BD8025;
    font-size: 5em;
    text-align: center;
    text-shadow: 2px 2px black;
    margin-top: 30px;
    margin-bottom: 10px;
    padding-bottom: 0;

}

.page-title-box {
    border: 5px solid orange;
    background-color: rgba(0, 0, 0, .8);
    margin-top: 10px;
    padding: 10px;
    border-radius: 12px;
    box-shadow: 5px 5px black;
}

.game-info {
    font-size: 3em;
    color: #28b213;
    text-shadow: 2px 2px black;
    margin-top: 20px;
    border: 2px solid orange;
    border-radius: 12px;
    background-color: rgba(0, 0, 0, .8);
    text-align: center;
    padding: 5px;
    box-shadow: 5px 5px black;
    width: 18vh;
    height: auto;
}

.game-info h2 {
    font-size: .8em;
    color: #28b213;
    text-shadow: 2px 2px black;
}



/* --------- Cards -------------------*/
.game-info-container {
    grid-column: 1 / -1;
    display: flex;
    justify-content: space-between;
    user-select: none;
    -moz-user-select: none;
    padding-top: 2px;
    margin-top: 0;
}


.card {
    position: relative;
    height: 175px;
    width: 125px;
}

div.card {
    background-color: transparent;
    border: none;
    user-select: none;
    -moz-user-select: none;
}

.game-container {
    display: grid;
    grid-template-columns: repeat(6, auto);
    grid-gap: 10px;
    margin: 50px;
    margin-top: 0;
    justify-content: center;
    perspective: 500px;
}

.card:hover {
    cursor: pointer;
}

.card-face {
    position: absolute;
    width: 125px;
    height: 175px;
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: hidden;
    -moz-overflow: hidden;
    backface-visibility: hidden;
    -webkit-backface-visibility: hidden;
    border-radius: 12px;
    border: 1px solid orange;
    transition: transform 500ms ease-in-out;
    -webkit-transition: transform 500ms ease-in-out;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

@keyframes overlay-grow {
    from {
        background-color: rgba(0, 0, 0, 0);
        font-size: 0;
    }

    to {
        background-color: rgba(0, 0, 0, .9);
        font-size: 10em;
    }
}

.visible .card-back {
    transform: rotateY(-180deg);
    -webkit-transform: rotateY(-180deg);
    width: 125px;
    height: 175px;
}

.visible .card-front {
    transform: rotateY(0);
    -webkit-transform: rotateY(0);
    width: 125px;
    height: 175px;
}

.card-back {
    background-color: black;
    border-color: orange;
}

.card-front {
    transform: rotateY(180deg);
    -webkit-transform: rotateY(180deg);
    overflow: hidden;
}

.card-front img {
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

/* ---------------- Overlays ---------------*/
.overlay-text {
    display: none;
    position: fixed;
    top: 20%;
    left: 20%;
    right: 20%;
    bottom: 20%;
    justify-content: center;
    align-items: center;
    z-index: 100;
    color: #BD8025;
    font-family: "Ranchers", sans-serif;
    cursor: pointer;
    text-shadow: 2px 2px black;
    text-align: center;
    padding: 20px;
    border-radius: 12px;
}

.overlay-text i {
    color: #fafafa;
}

.overlay-text h1 {
    font-size: 75px;
}

.overlay-text-small {
    text-align: center;
    font-size: .2em;
    font-family: "Monda", sans-serif;
    color: #34a223;
}

.overlay-text.visible {
    display: flex;
    flex-direction: column;
    animation: overlay-grow 500ms forwards;
    -webkit-animation: overlay-grow 500ms forwards;
}

.overlay-text-small i {
    color: yellow;
    font-size: 45px;
}

/*-------  media query -------*/
@media only screen and (min-width: 401px) and (max-width: 900px) {
    .game-container {
        grid-template-columns: repeat(4, auto);

    }

    .game-info-container {
        flex-direction: column;
        align-items: center;
    }

    .overlay-text h1 {
        font-size: .2em;
    }

    .overlay-text-small {
        font-size: .1em;
    }

}

@media (max-width: 400px) {
    .page-title {
        font-size: 3em;
    }

    body.modal-open {
        pointer-events: auto;
    }

    .game-container {
        grid-template-columns: repeat(3, auto);
    }

    .game-info-container {
        flex-direction: column;
        align-items: center;
    }

    /*--- Overlays ---*/
    .overlay-text h1 {
        font-size: .2em;
    }

    .overlay-text-small {
        font-size: .1em;
    }

    /*--- Cards ---*/
    .card {
        height: 125px;
        width: 75px;
    }

    .visible .card-front {
        width: 75px;
        height: 125px;
    }

    .visible .card-back {
        width: 75px;
        height: 125px;
    }

    .card-back {
        width: 75px;
        height: 125px;
    }

    .card img {
        width: 75px;
        height: 125px;
    }

    .card-front {
        width: 75px;
        height: 125px;
    }
}

@media (max-width: 1458px) {
    .scoreboard {
        display: none;
    }
}

/*-------  Footer -------*/
footer {
    text-align: center;
    position: fixed;
    bottom: 0px;
    background-color: rgba(0, 0, 0, .8);
    width: 100%;
    height: auto;
    padding-top: 5px;
    margin-top: 20px;

}

footer i {
    color: #28b213;
    font-size: 35px;
    letter-spacing: 30px;
    padding: 10px;
    margin-top: 0;
    align-items: center;
}

footer i:hover {
    color: #BD8025;
    transform: scale(1.1);
    -webkit-transform: scale(1.1);
}

